# iris-engine

./: Cargo.toml  lcov.info  nextest.toml  tarpaulin-report.html  tarpaulin.toml
examples/: basic_shader.wgsl  cube.rs  light_shader.wgsl  lit.wgsl  unlit.wgsl
examples/boat/: main.rs
examples/boat_lit/: main.rs
examples/boat_pbr/: main.rs
examples/cube/: main.rs  shader.wgsl
examples/cube_lights/: main.rs
examples/octree/: main.rs
examples/plane/: main.rs
examples/plane_pbr/: main.rs
examples/sphere/: main.rs
examples/sphere_light/: main.rs
examples/sphere_lights/: main.rs
examples/sphere_lit/: main.rs
examples/sphere_pbr/: main.rs
examples/triangle/: main.rs
geometry/: Cargo.toml
geometry/proptest-regressions/: frustum.txt  intersections.txt  lib.txt  line.txt  plane.txt  ray.txt  root_finding.txt
geometry/src/: frustum.rs  intersections.rs  lib.rs  line.rs  plane.rs  ray.rs  reflection.rs  root_finding.rs  shapes.rs
proptest-regressions/: intersections.txt  lib.txt  line.txt  plane.txt
proptest-regressions/geometry/: frustum.txt  intersections.txt  plane.txt  reflection.txt  root_finding.txt
proptest-regressions/geometry/shapes/: sphere.txt
proptest-regressions/visibility/bounding_volume/: aabb.txt
renderer/: Cargo.toml
renderer/examples/: cube.rs
renderer/src/: app.rs  light.rs  mesh.rs
rendering/: Cargo.toml
rendering/src/: color.rs  lib.rs
src/: collision.rs  core.rs  geometry.rs  lib.rs  renderer.rs  resource.rs  tests.rs  visibility.rs
src/collision/: intersections.rs  linear_systems.rs  reflection.rs  root_finding.rs  shapes.rs
src/collision/shapes/: ellipsoid.rs  plane.rs  quad.rs  ray.rs  triangle.rs
src/core/: app.rs  bind_group.rs  buffer.rs  component.rs  compute.rs  egui_renderer.rs  entity.rs  gpu_sendable.rs  image.rs  material.rs  material_renderer.rs  renderer.rs  resources.rs  transform.rs
src/core/shaders/: lit.wgsl  wire.wgsl
src/geometry/: frustum.rs  intersections.rs  plane.rs  ray.rs  reflection.rs  root_finding.rs  shapes.rs
src/geometry/shapes/: cuboid.rs  cylinder.rs  sphere.rs
src/renderer/: app.rs  bind_group.rs  buffer.rs  camera.rs  color.rs  compute.rs  egui_renderer.rs  gui.rs  light.rs  light.wgsl  lit.wgsl  material.rs  mesh.rs  mod.rs  model.rs  pbr.wgsl  render_pipeline.rs  resources.rs  texture.rs  unlit.wgsl  wgpu_renderer.rs
src/renderer/shaders/: lit.wgsl  mipmap_generation.wgsl  pbr.wgsl  unlit.wgsl  wire.wgsl
src/resource/: asset_manager.rs  resource_manager.rs
src/visibility/: bounding_volume.rs  frustum.rs  octree.rs
src/visibility/bounding_volume/: aabb.rs  bounding_sphere.rs  obb.rs
xtask/: Cargo.toml
