
[package]
name = "iris-engine" # the name of the package
version = "0.1.0"    # the current version, obeying semver
edition = '2021'

[lints.rust]
# missing_docs = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
explicit-outlives-requirements = "warn"
keyword-idents-2018 = "warn"
keyword-idents-2024 = "warn"
let-underscore-drop = "warn"
non-ascii-idents = "warn"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unit-bindings = "warn"
unnameable-types = "warn"
unreachable-pub = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused-import-braces = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

[lints.clippy]
# expect_used = "warn"
# unwrap_used = "warn"
# panic = "warn"
# missing_docs_in_private_items = "warn"
missing_errors_doc = "allow"
mod_module_files = "warn"
partial-pub-fields = "allow"
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_panics_doc = "allow"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
missing_assert_message = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
partial_pub_fields = "warn"
pattern_type_mismatch = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
todo = "warn"
unimplemented = "warn"
unneeded_field_pattern = "warn"

[dependencies]
glam = { version = "0.28.0", features = ["approx", "glam-assert", "bytemuck"] }
proptest = "1.4.0"
approx = "0.5.1"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.19.4"
winit = "0.29.15"
roots = "0.0.8"
image = { version = "0.25.1", features = [
    "jpeg",
    "png",
] } # Add the types you want support for
futures-channel = "0.3.30"
tobj = "4.0.2"
hexasphere = "13.1.0"
num-traits = "0.2.19"
palette = "0.7.6"
itertools = "0.13.0"
egui = "0.27.2"
egui-wgpu = { version = "0.27.2", features = ["winit"] }
egui-winit = "0.27.2"
raw-window-handle = "0.6.0"
rfd = "0.14.1"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
slotmap = "1.0.7"
assets_manager = "0.11.6"
hecs = "0.10.5"
