[package]
name = "geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.27.0", features = ["approx", "glam-assert"] }
num-complex = "0.4"
approx = "0.5.1"
roots = "0.0.8"
[dev-dependencies]
proptest = "1.4.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[lints]
workspace = true
