[package]
name = "geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { workspace = true }
approx = { workspace = true }
roots = "0.0.8"

[dev-dependencies]
proptest = { workspace = true }

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[lints]
workspace = true
